--- a/public/aboutme.html
+++ b/public/aboutme.html
@@ -25,6 +25,6 @@
         <li><a href="mailto:janiola.fransjoseph@gmail.com">Contact Me</a></li>
         <li><a href="https://www.linkedin.com/in/frans-janiola/">Visit LinkedIn Profile</a></li>
     </ul>
-
+    <h2><a href="./index.html/>Back to Main Page</a></h2>
 </body>
 </html>
